[gd_scene load_steps=13 format=3 uid="uid://ck0fllajh8vyu"]

[ext_resource type="Script" path="res://ArcadeStage/arcade_stage.gd" id="1_lyb5w"]
[ext_resource type="PackedScene" uid="uid://box4qfmp1mwhd" path="res://Player/player_1.tscn" id="2_3nt5s"]
[ext_resource type="PackedScene" uid="uid://d3qbrigkvnk37" path="res://ArcadeStage/goldBall.tscn" id="2_7skop"]
[ext_resource type="PackedScene" uid="uid://btqqyktcrmdar" path="res://Opponent/opponent.tscn" id="3_ott5g"]
[ext_resource type="PackedScene" uid="uid://d3bnbau462n6" path="res://Ball/ball.tscn" id="4_fydsi"]
[ext_resource type="PackedScene" uid="uid://chudnf1cqb5un" path="res://Player3/Player3.tscn" id="5_oj72h"]
[ext_resource type="PackedScene" uid="uid://dojjhtfmxuwcb" path="res://Player4/Player4.tscn" id="6_4dvlu"]
[ext_resource type="Texture2D" uid="uid://d046b3vbprqky" path="res://Assets/Assets/Pink_Square.png" id="7_6uxty"]
[ext_resource type="AudioStream" uid="uid://cl1usgjf5x81k" path="res://Assets/Assets/ping_pong_8bit_beeep.ogg" id="8_mf68r"]
[ext_resource type="AudioStream" uid="uid://b5pdoecvaskv5" path="res://Assets/Assets/AdhesiveWombat - Night Shade.mp3" id="9_6vclu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8cpa"]
size = Vector2(179.605, 179.605)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8aq2x"]
size = Vector2(166, 635)

[node name="ArcadeStage" type="Node"]
script = ExtResource("1_lyb5w")
PowerBallScene = ExtResource("2_7skop")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0823529, 0.117647, 0.196078, 1)

[node name="PlayerOneScore" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 194.0
offset_top = 420.0
offset_right = -532.0
offset_bottom = -413.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.639216, 0.286275, 0.643137, 1)
theme_override_font_sizes/font_size = 30
text = "P1 Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerTwoScore" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 573.0
offset_top = 420.0
offset_right = -188.0
offset_bottom = -398.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.635294, 0.909804, 1)
theme_override_font_sizes/font_size = 30
text = "P2 Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerThreeScore" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 368.0
offset_top = 542.0
offset_right = -372.0
offset_bottom = -292.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.92549, 0.109804, 0.141176, 1)
theme_override_font_sizes/font_size = 30
text = "P3 Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerFourScore" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 368.0
offset_top = 314.0
offset_right = -354.0
offset_bottom = -513.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.407843, 0.901961, 0.105882, 1)
theme_override_font_sizes/font_size = 30
text = "P4 Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameTimeLabel" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 368.0
offset_top = 365.0
offset_right = -368.0
offset_bottom = -447.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.858824, 0.352941, 0.631373, 1)
theme_override_font_sizes/font_size = 30
text = "Game Time"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallTimer" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 323.0
offset_top = 442.0
offset_right = -327.0
offset_bottom = -358.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
text = "BallTime"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player1" parent="." groups=["Players"] instance=ExtResource("2_3nt5s")]
position = Vector2(30, 450)
scale = Vector2(0.5, 0.5)

[node name="player2" parent="." groups=["Players"] instance=ExtResource("3_ott5g")]
position = Vector2(870, 450)
scale = Vector2(0.5, 0.5)

[node name="Ball" parent="." instance=ExtResource("4_fydsi")]
position = Vector2(450, 450)
scale = Vector2(0.5, 0.5)

[node name="Player4" parent="." groups=["Players"] instance=ExtResource("5_oj72h")]
position = Vector2(450, 30)
scale = Vector2(0.5, 0.5)

[node name="Player3" parent="." groups=["Players"] instance=ExtResource("6_4dvlu")]
position = Vector2(450, 870)
scale = Vector2(0.5, 0.5)

[node name="TopLeftCorner" type="StaticBody2D" parent="."]
position = Vector2(2, 0)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLeftCorner"]
rotation = 0.785398
shape = SubResource("RectangleShape2D_d8cpa")

[node name="Sprite2D" type="Sprite2D" parent="TopLeftCorner/CollisionShape2D"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_6uxty")

[node name="TopRightCorner" type="StaticBody2D" parent="."]
position = Vector2(900, 0)
rotation = -1.5708
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopRightCorner"]
rotation = 0.785398
shape = SubResource("RectangleShape2D_d8cpa")

[node name="Sprite2D" type="Sprite2D" parent="TopRightCorner/CollisionShape2D"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_6uxty")

[node name="BottomLeftCorner" type="StaticBody2D" parent="."]
position = Vector2(0, 900)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomLeftCorner"]
rotation = 0.785398
shape = SubResource("RectangleShape2D_d8cpa")

[node name="Sprite2D" type="Sprite2D" parent="BottomLeftCorner/CollisionShape2D"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_6uxty")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(900, 900)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
rotation = 0.785398
shape = SubResource("RectangleShape2D_d8cpa")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D/CollisionShape2D"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_6uxty")

[node name="LeftGoal" type="Area2D" parent="."]
position = Vector2(-164, 138)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftGoal"]
position = Vector2(73, 311.5)
shape = SubResource("RectangleShape2D_8aq2x")

[node name="RightGoal" type="Area2D" parent="."]
position = Vector2(916, 139)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightGoal"]
position = Vector2(73, 311.5)
shape = SubResource("RectangleShape2D_8aq2x")

[node name="TopGoal" type="Area2D" parent="."]
position = Vector2(139, -17)
rotation = -1.5708
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopGoal"]
position = Vector2(73, 311.5)
shape = SubResource("RectangleShape2D_8aq2x")

[node name="BottomGoal" type="Area2D" parent="."]
position = Vector2(138, 1060)
rotation = -1.5708
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomGoal"]
position = Vector2(73, 311.5)
shape = SubResource("RectangleShape2D_8aq2x")

[node name="CountDownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PointLoss" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_mf68r")
bus = &"Sfx"

[node name="BackroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_6vclu")
autoplay = true
bus = &"Music"

[node name="GameTime" type="Timer" parent="."]
wait_time = 60.0

[node name="PowerSpawn1" type="Node2D" parent="." groups=["PowerSpawns"]]
position = Vector2(442, 491)

[node name="PowerSpawn2" type="Node2D" parent="." groups=["PowerSpawns"]]
position = Vector2(450, 491)

[node name="PowerSpawn3" type="Node2D" parent="." groups=["PowerSpawns"]]
position = Vector2(450, 491)

[node name="PowerSpawn4" type="Node2D" parent="." groups=["PowerSpawns"]]
position = Vector2(442, 491)

[node name="PowerTimer" type="Timer" parent="."]

[node name="P1Keys" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -217.0
offset_right = -517.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.180392, 0.239216, 0.368627, 1)
theme_override_font_sizes/font_size = 30
text = "P1
w
+
s"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P2Keys" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 505.0
offset_right = 205.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.180392, 0.239216, 0.368627, 1)
theme_override_font_sizes/font_size = 30
text = "P2
up
+
down"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P3Keys" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 148.0
offset_top = 374.0
offset_right = -152.0
offset_bottom = 374.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.180392, 0.239216, 0.368627, 1)
theme_override_font_sizes/font_size = 30
text = "P3 n + m"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P4Keys" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 152.0
offset_top = -376.0
offset_right = -148.0
offset_bottom = -376.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.180392, 0.239216, 0.368627, 1)
theme_override_font_sizes/font_size = 30
text = "P4 x + c"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="LeftGoal" to="." method="_on_left_goal_body_entered"]
[connection signal="body_entered" from="RightGoal" to="." method="_on_right_goal_body_entered"]
[connection signal="body_entered" from="TopGoal" to="." method="_on_top_goal_body_entered"]
[connection signal="body_entered" from="BottomGoal" to="." method="_on_bottom_goal_body_entered"]
[connection signal="timeout" from="CountDownTimer" to="." method="_on_count_down_timer_timeout"]
[connection signal="timeout" from="GameTime" to="." method="_on_game_time_timeout"]
[connection signal="timeout" from="PowerTimer" to="." method="_on_power_timer_timeout"]
